--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/linechartview"
             app:linechart_padding="6dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="250dp" />
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
